[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/PlatformerCharacter/PlatformerCharacter.gd" type="Script" id=1]
[ext_resource path="res://assets/Platformer character.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[node name="PlatformerCharacter" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -64 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="GroundRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 16
collide_with_areas = true

[node name="WallRays" type="Node2D" parent="."]

[node name="RightRay" type="RayCast2D" parent="WallRays"]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 16

[node name="LeftRay" type="RayCast2D" parent="WallRays"]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 16
